# swing_screener

./: .dockerignore  .env.example  .gitignore  ACCOUNT_MANAGEMENT_EXECUTIVE_SUMMARY.md  ACCOUNT_SIZE_ANALYSIS.md  AGENTS.md  AGENT_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  Dockerfile.api  Dockerfile.web  EDUCATIONAL_TRANSFORMATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  M1_IMPLEMENTATION_SUMMARY.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE1_IMPLEMENTATION_GUIDE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  PTEE_IMPLEMENTATION.md  Procfile  README.md  README_BEGINNER.md  ROADMAP.md  TESTING_COMPLETE.md  app.json  degiro_prs.md  docker-compose.yml  orders.json  package.json  positions.json  pyproject.toml  requirements.txt  test_api.sh  web-ui-assessment.md
.github/: BRANCH_PROTECTION.md  copilot-instructions.md
agent/: README.md  __init__.py  agent.py  chat_graph.py  cli.py  client.py  validate.py  workflows.py
api/: .env.example  README.md  __init__.py  dependencies.py  main.py  models.py  monitoring.py  runtime_config.py  security.py
config/: README.md  defaults.yaml  degiro_isin_map.json  intelligence.yaml  mcp.yaml  mcp_features.yaml  strategies.yaml  strategy.yaml  taxonomy_presets.yaml  user.yaml
data/: README.md  active_strategy.json  orders.json  positions.json  screener_history.json  strategies.json  swing_screener.db  symbol_pool.json  tenant_memberships.example.csv  users.example.csv
docs/: AGENTS.md  AGENT_IMPLEMENTATION_COMPLETE.md  AGENT_IMPLEMENTATION_SUMMARY.md  AGENT_INTEGRATION_GUIDE.md  BACKEND_IMPLEMENTATION.md  BROKER_INTEGRATION.md  CLI.md  CODE_REVIEW.md  DAILY_REVIEW_IMPLEMENTATION.md  DAILY_USAGE_GUIDE.md  DATABASE_MIGRATION.md  EDUCATIONAL_CODE_EXAMPLES.md  EDUCATIONAL_TRANSFORMATION_SUMMARY.md  EDUCATION_REFACTOR_PLAN.md  FRONTEND_IMPLEMENTATION.md  INDEX.md  INDICATOR_VALIDATION.md  INTEL_SYSTEM_DESIGN.md  LLM_GUIDE.md  LLM_INTELLIGENCE_IMPLEMENTATION.md  MARKET_INTELLIGENCE_PHILOSOPHY.md  MCP_ARCHITECTURE.md  MCP_COVERAGE_AUDIT.md  MCP_COVERAGE_STATUS.md  MCP_DECISIONS.md  MCP_FEATURE_MAP.md  MCP_IMPLEMENTATION_ROADMAP.md  MCP_QUICK_REFERENCE.md  MCP_SERVER_COMPLETE.md  MCP_SUMMARY.md  MCP_TOOLS_REFACTORING.md  (+31 more)
(+1629 files in other folders)
