[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swing-screener"
version = "0.1.0"
description = "Modular swing trading screener, ranking and backtesting framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Your Name" }
]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "yfinance>=0.2",
  "pyarrow>=14.0",
  "streamlit>=1.31"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "black",
  "ruff"
]

[project.scripts]
swing-screener = "swing_screener.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.package-data]
"swing_screener.data" = ["universes/*.csv"]
