[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swing-screener"
version = "0.1.0"
description = "Modular swing trading screener, ranking and backtesting framework"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }

authors = [
  { name = "Your Name" }
]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "yfinance>=0.2",
  "pyarrow>=14.0",
  "fastapi>=0.104",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.0",
  "httpx (>=0.28.1,<0.29.0)",
  "portalocker>=2.8.0",
  "alpaca-py>=0.22.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "black",
  "ruff",
  "TA-Lib>=0.4.28"
]
mcp = [
  "mcp>=1.0.0",
  "pyyaml>=6.0"
]

[project.scripts]
swing-screener = "swing_screener.cli:main"

[tool.setuptools]
package-dir = {"" = "src", "mcp_server" = "mcp_server"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = [
    "integration: marks tests as integration tests (require API keys, slower)",
]

[tool.setuptools.package-data]
"swing_screener.data" = ["universes/*.csv", "universes/*.json"]
